# NuSiF_CFD

./: CMakeLists.txt  README.md
Parameter_files/: EnhancedFluidSimTest.par  PSolver.par  post_process.py
Results_from_tests/RE1/: Custom_0500.vtk  EnhancedFluidSimTest.par
Results_from_tests/RE250/: EnhancedFluidSimTest.par
Results_from_tests/RE500/: ._bsRE500.mov  Custom_0028.vtk  EnhancedFluidSimTest.par
skeleton/: EnhancedFluidSimTest_ori.par  arraytest.txt
skeleton/Parameter_files/: poisson.par
skeleton/src/: ._backstep.par  Array.cc  Array_new.hh  CGSolver.cc  CGSolver.hh  CMakeLists.txt  CustomBC.hh  CustomInit.hh  CustomMesh.hh  CustomUDA.hh  Debug.cc  EnhancedFluidSimTest.cc  EnhancedFluidSimulator.cc  EnhancedFluidSimulator.hh  EnhancedFluidSimulator_new.cc  FileReader.cc  Geometry2D.cc  Geometry2D.hh  GrayScaleImage.cc  SORSolver.cc  SORSolver.hh  Solver.hh  StaggeredGrid.cc  StaggeredGrid.hh  Types.hh  VTKWriter.cc  lodepng.cc
skeleton/tests/: ArrayTest.cc  ArrayTestInput.txt  CGTest.cc  CMakeLists.txt  EnhancedFluidSimTest.cc  FileReaderTest.cc  FileReaderTestInput.txt  FluidSimTest.cc  PoisTest.cc  SORTest.cc  (+2 more)
src/: ._lodepng.cc  ._lodepng.h  Array.cc  Array.hh  CMakeLists.txt  CustomBC.hh  CustomInit.hh  CustomMesh.hh  Debug.cc  Debug.hh  EnhancedFluidSimulator.cc  EnhancedFluidSimulator.hh  FileReader.cc  FileReader.hh  FluidSimulator.cc  FluidSimulator.hh  FluidSimulator_old.cc  Geometry2D.cc  Geometry2D.hh  GrayScaleImage.hh  MatrixCOO.cc  MatrixCOO.hh  PSolver.cc  PSolver.hh  SORSolver.cc  SORSolver.hh  StaggeredGrid.cc  StaggeredGrid.hh  Types.hh  VTKWriter.cc  VTKWriter.hh  backstep.par  dcavity.par  double_compares.cpp  double_compares.h  main.cc
tests/: ArrayTest.cc  CMakeLists.txt  EnhancedFluidSimTest.cc  EnhancedFluidSimTest.par  FileReaderTest.cc  FluidSimTest.cc  MatrixCOOTest.cc  PSolverTest.cc  SORTest.cc  dcavity.par  ex3aTest.cc  grid_config.par
(+14 files in other folders)
